--- a/_posts/2017-11-07-alpha.markdown
+++ b/_posts/2017-11-07-alpha.markdown
@@ -6,20 +6,20 @@ tags : Tech
 
 ---
 
-Have you heard of [Alpha Go Zero](https://medium.com/intuitionmachine/the-strange-loop-in-alphago-zeros-self-play-6e3274fcdd9f) (AGZ) yet? It's hands down better than the regular Alpha Go which beat the best Alpha Go human player a year ago. The most fascinating thing about the achievement is its ability to self learn based on logic. AGZ is at a degree where a human is unable to reverse engineer why it made a move. 
+Have you heard of [Alpha Go Zero](https://medium.com/intuitionmachine/the-strange-loop-in-alphago-zeros-self-play-6e3274fcdd9f) (AGZ) yet? It's hands down better than the regular Alpha Go which beat the best Alpha Go human player a year ago. The most fascinating thing about the achievement is its ability to self-learn based on logic. AGZ is at a degree where a human is unable to reverse-engineer why it made a move. 
 
-It's inevitable that machines will become smarter than human beings. We can argue about the when but given breakthroughs like this, it's within decades, not centuries. One of two outcomes is likely.
+It's inevitable that machines will become smarter than human beings. We can argue about the when but given breakthroughs like this, it's within decades, not centuries. One of two outcomes is likely:
 - machines end up self-learning to a degree that they find a way to control humanity
 - an altogether new species of human beings fuses with self-learning machine with tech like [Neuralink](https://waitbutwhy.com/2017/04/neuralink.html).
 
-In either case, lets name the outcome of this evolution, Homo Machines. Homo Machines will be able to compound learn so they will be rapidly different from homo sapiens in just a few years. 
+In either case, let's name the outcome of this evolution, Homo Machines. Homo Machines will be able to compound learn so they will be quite different from humans in just a few years. 
 
-So here is my main argument, we humans decide to treat a large majority of the animals so poorly, primary via factory farming and inhumane hunting, even though we have plenty of DNA in common. Including commonalities like the ability to feel emotions, pain, hunger, love and jealousy. By this logic, the most likely scenario is for Homo Machines to also treat humans the same way as we do, say, poultry in factory farms.
+So here is my main argument, we humans decide to treat a large majority of the animals so poorly, primarily via factory farming and inhumane hunting, even though we have plenty of DNA in common. This includes commonalities like the ability to feel emotions, pain, hunger, love and jealousy. By this logic, the most likely scenario is for Homo Machines to also treat humans the same way as we do, say, poultry in factory farms.
 
-Some might defend that poultry isn't close to the top of the food chain or nearly have as much intelligence, so they deserve it. Unfortunately, humans could be in the exact scenario as poultry in a few decades because of the machine's ability to become intelligent recursively. 
+Some might argue that poultry isn't close to the top of the food chain or have nearly as much intelligence, so they deserve it. Unfortunately, humans could be in the exact scenario as poultry in a few decades because of the machine's ability to become intelligent recursively. 
 
 What if we changed our way today and we begin treating our animals like we want to be treated ourselves? If yes, is it possible that our training data we are feeding to these machines over a long enough period of time would set a new precedent to treat those lower in the food chain more thoughtfully and as a result, in a few decades, although subservient, we'll co-exist with Homo Machines?
 
-Given how Homo Machines are fundamentally based on rationale and logic, think it's a bet worth a gander.
+Given how Homo Machines are fundamentally based on rationale and logic, it's a bet worth a gander.
    
 ---
