--- a/_posts/2017-11-24-ultra.markdown
+++ b/_posts/2017-11-24-ultra.markdown
@@ -8,11 +8,11 @@ tags : Tech
 
 Four months ago, I signed up to run the The North Face 50 Mile Endurance Race in Marin County. I signed up the very next day after I went trail running for the first time. The Marin Headlands are so beautiful that I wanted a challenging excuse to spend more time exploring them. At 10,500 elevation delta, I hear that The North Face 50 is one of the most challenging 50 mile races in the US. 
 
-<center><img src="/images/blog/ultra/bib.jpg"/></center> 
+<center><img src="/images/blog/ultra/bib.jpg" width="600" height="600"/></center> 
 
 I had run a few marathons in the past but didn't think running almost twice the distance was even possible. However, the ultramarathon somehow made it on my bucket list. A 50 mile race is more challenging than a marathon in two ways. First, obviously, it's almost double the distance of a marathon but second, the hills. Most ultramarathons are on trails, and most trails have hills. Muscle fatigue occurs much faster on hills compared to road.
 
-<center><img src="/images/blog/ultra/marin2.jpg"/></center> 
+<center><img src="/images/blog/ultra/marin2.jpg" width="600" height="600""/></center> 
 
 My training plan (or lack there of) deserves an entire separate post, so onto the race. 
 
@@ -32,7 +32,7 @@ The next 10ish miles were in auto-pilot. Hit some monster hills but disciplined 
 
 More auto-pilot until mile 20. Striked up a conversation here and there with other runners. Miles tend to fly by effortlessly when you engage in a deep coversation while running - especially if it's about running. Talked to this 50 year old woman, Andrea, who was running her 4th 50 miler in the last 4 weeks. I wanted every misogynist I've met in my life to meet her.  
 
-<center><img src="/images/blog/ultra/marin.jpg"/></center> 
+<center><img src="/images/blog/ultra/marin.jpg" width="600" height="600"/></center> 
 
 Mile 21, hit a monster wall. Felt like someone strapped on two 10 pound bracelets to my ankles. Struggled through it. Slow, but didn't stop. Since my legs felt so heavy, I wasn't lifting my feet off the ground. 
 
@@ -43,16 +43,18 @@ The next 4 miles were the toughest miles of the entire race. It was probably due
 Somewhere around mile 25, it felt like I passed through something. I got my stride back. I thought of Jon, my friend, who was going to pace me from mile 27 to 41. The trail turned from an uphill to a slight decline for as far as I could see. No one around me. Just me, the trail and the Pacific Ocean ahead of me. Out of nowhere, tears rolled out of my eyes. I hadn't experienced anything like it in my life. Something inside me told me how proud it was of me. I tend to be so hard on myself when training, especially during the past 4 months that, I think, this was a way for something in me to recognize and feel grateful for all my body had humbly put up with. I realized what self-compassion felt like in it's purest sense. 
 
 I met Jon at the Stinson Beach aid station within a few miles. The next few miles were a tough part of the course because we hit all stairs gaining about 1500 ft of elevation without a break. It didn't matter because Jon did an incredible job taking my mind off the race and kept my mind off the climb. My hamstrings cramped a few times. Jon came prepared with salt tabs which probably saved my race. It's funny how such a minor detail can demolish 4 months of hardwork and your race. More ridiculous elevation gain and loss but we took it all with our chins up. You make the best sort of friendships when you go through such a thing together.
+<br>
 
-<center><img src="/images/blog/ultra/jon.jpg"/></center> 
+<center><img src="/images/blog/ultra/jon.JPG" width="600" height="600"/></center> 
+<br>
 
 Mile 41, Jon dropped off at the Tennesey Valley aid station as planned and Kristina joined me to pace me to the finish line. I was delighted to see her. I find a second (or third? fourth?) wind in me. Power hiking all the uphills but pushing 7 min miles on the downhill. We reached the most beautiful view of the Golden Gate I had ever seen. It was so good we coudn't miss a selfie op. 
 
-<center><img src="/images/blog/ultra/kristina.jpg"/></center> 
+<center><img src="/images/blog/ultra/kristina.JPG" width="600" height="600"/></center> 
 
 The last part of the race made you run over the Golden Gate bridge. Made a final push to beat about 3-5 more runners in the last 2 miles.
 
-<center><img src="/images/blog/ultra/goldengate.jpg"/></center> 
+<center><img src="/images/blog/ultra/goldengate.JPG" width="600" height="600"/></center> 
 
 There I was. The finish line, I made it. Accomplished the goal that seemed impossible just 4 months ago. However, the first thing I thought of as I crossed the finish line was how conservative I had been the entire race. What an anti-climax. Did I sandbag it? I had more juice left. Should I have gone faster? It felt like I could have gone atleast another 20 to 30 miles but who knows - at these distances, anything can happen. I reminded myself that it didn't matter if I had finished earlier or run faster. I didn't sign up for that game. I signed up to finish running 50 miles without getting injured.  
 
@@ -60,7 +62,7 @@ Given that my goal when I signed up for the Ultra was to "just finish under the 
 
 My body type isn't ideal for running. I'm tall, weighting close to 200#s, so the odds were against me doing well in this race. My biggest accomplishment though wasn't about finshing this race at all. It was about finding the joy in running, getting to know myself better, exploring the trails and making incredible friends. Although I've checked this bucket list item, I'm not hanging up my running shoes yet. 
 
-<center><img src="/images/blog/ultra/finishline.jpg"/></center> 
+<center><img src="/images/blog/ultra/finishline.jpg" width="600" height="600"/></center> 
 
  Was it all worth it? Heck YES. 
    
