--- a/_posts/2017-11-24-ultra.markdown
+++ b/_posts/2017-11-24-ultra.markdown
@@ -1,19 +1,19 @@
 ---
 layout: post
-title: Running a 50 mile Ultra Marathon
+title: Running a 50 mile ultramarathon
 category: posts
 tags : Tech
 
 ---
 
 Four months ago, I signed up to run the The North Face 50 Mile Endurance Race in Marin County. I signed up the very next day after I went trail running for the first time. The Marin Headlands are so beautiful that I wanted a challenging excuse to spend more time exploring them. At 10,500 elevation delta, I hear that The North Face 50 is one of the most challenging 50 mile races in the US. 
-
+<br>
 <center><img src="/images/blog/ultra/bib.jpg" width="600" height="600"/></center> 
-
+<br>
 I had run a few marathons in the past but didn't think running almost twice the distance was even possible. However, the ultramarathon somehow made it on my bucket list. A 50 mile race is more challenging than a marathon in two ways. First, obviously, it's almost double the distance of a marathon but second, the hills. Most ultramarathons are on trails, and most trails have hills. Muscle fatigue occurs much faster on hills compared to road.
-
-<center><img src="/images/blog/ultra/marin2.jpg" width="600" height="600""/></center> 
-
+<br>
+<center><img src="/images/blog/ultra/marin2.jpg" width="600" height="600"/></center> 
+<br>
 My training plan (or lack there of) deserves an entire separate post, so onto the race. 
 
 The night before the race, I set my alarm for 2 AM. What most people don't realize is how early one needs to wake up start at race at 5 AM. I went to bed at 8:30 PM but couldn't fall asleep until 11. Must have been the nerves. I woke up at 1:50 AM, even before the alarm. It's funny how your unconcious body knows this entirely man-made created concept called time. I had a protein shake, picked up a car rental, picked up my friend Lorenzo who was also running this race and arrived at the start line at 4 AM, an hour before the race start time.
@@ -31,9 +31,9 @@ Running in the dark was special. It felt like a dream. I wasn't sleepy or sleepi
 The next 10ish miles were in auto-pilot. Hit some monster hills but disciplined myself to power hike all the uphills - which roughly ends up being the same pace for an average runner when going uphill. Skipped the first 3 aid stations but kept hydrated & chomped away at my nutrition bar stash. Of things one can multi-task at, eating while running downhill must be one of the hardest.
 
 More auto-pilot until mile 20. Striked up a conversation here and there with other runners. Miles tend to fly by effortlessly when you engage in a deep coversation while running - especially if it's about running. Talked to this 50 year old woman, Andrea, who was running her 4th 50 miler in the last 4 weeks. I wanted every misogynist I've met in my life to meet her.  
-
+<br>
 <center><img src="/images/blog/ultra/marin.jpg" width="600" height="600"/></center> 
-
+<br>
 Mile 21, hit a monster wall. Felt like someone strapped on two 10 pound bracelets to my ankles. Struggled through it. Slow, but didn't stop. Since my legs felt so heavy, I wasn't lifting my feet off the ground. 
 
 Out of nowhere, my left leg caught a tree root which sent me leaping forward, landing on my right knee. My left ankle straighted to an 180 degree angle along with sharp pain. Was sure I broke my ankle. A thought flashed wondering how I'd even get to the aid station for medical help. Came up on all fours and began rotating the ankle slowly. I didn't see my ankle swell and the pain began to subside. Began slowly walking and then tried  running. Phew. My ankle started to feel fine, but then hit a new low. Pep talked myself. I wasn't a self talker but training for this race has made me realize how important it is to engage with oneself in moments like these when everything in you wants to give up. Training for an ultra is much more mental than it is physical. If you do it right, it teaches you be an irrational optimist. I treated myself to some music from the iPod to help push through the slump. 
@@ -44,26 +44,24 @@ Somewhere around mile 25, it felt like I passed through something. I got my stri
 
 I met Jon at the Stinson Beach aid station within a few miles. The next few miles were a tough part of the course because we hit all stairs gaining about 1500 ft of elevation without a break. It didn't matter because Jon did an incredible job taking my mind off the race and kept my mind off the climb. My hamstrings cramped a few times. Jon came prepared with salt tabs which probably saved my race. It's funny how such a minor detail can demolish 4 months of hardwork and your race. More ridiculous elevation gain and loss but we took it all with our chins up. You make the best sort of friendships when you go through such a thing together.
 <br>
-
 <center><img src="/images/blog/ultra/jon.JPG" width="600" height="600"/></center> 
 <br>
-
 Mile 41, Jon dropped off at the Tennesey Valley aid station as planned and Kristina joined me to pace me to the finish line. I was delighted to see her. I find a second (or third? fourth?) wind in me. Power hiking all the uphills but pushing 7 min miles on the downhill. We reached the most beautiful view of the Golden Gate I had ever seen. It was so good we coudn't miss a selfie op. 
-
+<br>
 <center><img src="/images/blog/ultra/kristina.JPG" width="600" height="600"/></center> 
-
+<br>
 The last part of the race made you run over the Golden Gate bridge. Made a final push to beat about 3-5 more runners in the last 2 miles.
-
+<br>
 <center><img src="/images/blog/ultra/goldengate.JPG" width="600" height="600"/></center> 
-
+<br>
 There I was. The finish line, I made it. Accomplished the goal that seemed impossible just 4 months ago. However, the first thing I thought of as I crossed the finish line was how conservative I had been the entire race. What an anti-climax. Did I sandbag it? I had more juice left. Should I have gone faster? It felt like I could have gone atleast another 20 to 30 miles but who knows - at these distances, anything can happen. I reminded myself that it didn't matter if I had finished earlier or run faster. I didn't sign up for that game. I signed up to finish running 50 miles without getting injured.  
 
 Given that my goal when I signed up for the Ultra was to "just finish under the 14 hr time cap," a time of 10 hrs 31 min was a phenomenal success.  
 
 My body type isn't ideal for running. I'm tall, weighting close to 200#s, so the odds were against me doing well in this race. My biggest accomplishment though wasn't about finshing this race at all. It was about finding the joy in running, getting to know myself better, exploring the trails and making incredible friends. Although I've checked this bucket list item, I'm not hanging up my running shoes yet. 
-
+<br>
 <center><img src="/images/blog/ultra/finishline.jpg" width="600" height="600"/></center> 
-
+<br>
  Was it all worth it? Heck YES. 
    
 ---
