--- a/_posts/2017-11-24-ultra.markdown
+++ b/_posts/2017-11-24-ultra.markdown
@@ -36,7 +36,7 @@ More auto-pilot until mile 20. Striked up a conversation here and there with oth
 <br>
 Mile 21, hit a monster wall. Felt like someone strapped on two 10 pound bracelets to my ankles. Struggled through it. Slow, but didn't stop. Since my legs felt so heavy, I wasn't lifting my feet off the ground. 
 
-Out of nowhere, my left leg caught a tree root which sent me leaping forward, landing on my right knee. Strike 2? My left ankle straightened to an 180 degree angle along with sharp pain. Was sure I broke my ankle. A thought flashed wondering how I'd even get to the aid station for medical help. Came up on all fours and began rotating the ankle slowly. I didn't see my ankle swell and the pain began to subside. Began slowly walking and then tried  running. Phew. My ankle started to feel fine, but mentally hit a new low. Pep talked myself. I wasn't a self-talker but training for this race has made me realize how important it is to engage with oneself in moments like these when everything in you wants to give up. Training for an ultra is much more mental than it is physical. If you do it right, it teaches you be an irrational optimist. I treated myself to some music from the iPod to help push through the slump. 
+Out of nowhere, my left leg caught a tree root which sent me leaping forward, landing on my right knee. Strike 2? My left ankle straightened to an 180 degree angle along with sharp pain. Was sure I broke my ankle. A thought flashed wondering how I'd even get to the aid station for medical help. Came up on all fours and began rotating the ankle slowly. I didn't see my ankle swell and the pain began to subside. Began slowly walking and then tried  running. Phew. My ankle started to feel fine, but mentally hit a new low. Pep talked myself. I wasn't a self-talker but training for this race has made me realize how important it is to consciously engage with oneself in moments like these when everything in you wants to give up. Training for an ultra is much more mental than it is physical. If you do it right, it teaches you be an irrational optimist. I treated myself to some music from the iPod to help push through the slump. 
 
 The next 4 miles were the toughest miles of the entire race. It was probably due to a combination of a steady  incline, some cramps and haphazard tree roots on the trial.
 
