--- a/_posts/2017-11-24-ultra.markdown
+++ b/_posts/2017-11-24-ultra.markdown
@@ -14,7 +14,7 @@ I had run a few marathons in the past but didn't think running almost twice the 
 <br>
 <center><img src="/images/blog/ultra/marin2.jpg" width="400" height="400"/></center> 
 <br>
-My training plan (or lack there of) deserves an entire separate post, so onto the race. 
+My training journey deserves an entire separate post. I'll just say that it was extremely rewarding because I saw progress every single week. Onto the race. 
 
 The night before the race, I set my alarm for 2 AM. What most people don't realize is how early one needs to wake up for a 5 AM start. I went to bed at 8:30 PM but couldn't fall asleep until 11. Must have been the nerves. I woke up at 1:50 AM, even before the alarm. It's funny how your unconcious body knows this entirely man-made concept called time. I had a protein shake, picked up a car rental, picked up my friend Lorenzo who was also running this race and arrived at the start line at 4 AM, an hour before the race start time.
 
