--- a/_posts/2018-02-17-moment.markdown
+++ b/_posts/2018-02-17-moment.markdown
@@ -17,7 +17,12 @@ Only that day dawns to which we are awake. - <b> Henry David Thoreau, Walden </b
 If not this, what else? 
 
 <br>
-<center><img src="/images/blog/moment/amsterdam.jpg" width="400" height="400"/></center> 
+<br>
+<center>
+<img src="/images/blog/moment/amsterdam.jpg" width="400" height="400"/>
+<i> A cold february morning in Amsterdam</i>
+</center> 
+
 <br>
 
 
