--- a/_posts/2018-03-11-stories.markdown
+++ b/_posts/2018-03-11-stories.markdown
@@ -13,7 +13,7 @@ Stories have led to humans to cooperate and build something bigger than the spec
 
 Biases are built based on stories people listen to, the people they interact with and the opportunities they are given. The better the story, the more number of listeners and a better grip on those listeners. 
 
-One neat way to decide if you should believe a story is to go down to the first principles and find out if what's being said is a fact vs an opinion. Problem is, not all stories can be traced down facts, especially those with an indeterninistic outcome. 
+One neat way to decide if you should believe a story is to go down to the first principles and find out if what's being said is a fact vs an opinion. Problem is, not all stories can be traced down facts, especially those with an indeterministic outcome. 
 
 Sometimes, the facts are there but you'd likely only spend the time to get down to the facts if your life depended on it. Humans by nature like certainlity and feel comfort in arriving at a judgement which makes it hard to detach from the narrator, especially with your pre-conceived biases. The stronger the attachement to the story the more you don't want to listen to the alternative narrative. 
 
