--- a/_posts/2018-05-21-hawaii.markdown
+++ b/_posts/2018-05-21-hawaii.markdown
@@ -1,26 +1,24 @@
 ---
 layout: post
-title: Attachment to Staying Present 
+title: Maui & the Big Island
 category: posts
 tags : Travel
 
 ---
 
-# Maui & the Big Island
-
-We just spent a week in paradise and thought I'd note someplaces we enjoyed the most. If we didn't absolutely love something about a place, it's not on the list. Obviously, these recommendations are heavily skewed towards what my wife and I like to do which mostly revolves around being outside as much as possible, eating good food and drinking good coffee & beer. We are both vegetarian and although Hawaii's cuisine is fairly meat-centric, we were able to find some pretty amazing vegetarian options. One final note - normally we'd hike much more, but I sprained my left ankle pretty bad on the first day on a hike and chanced up right foot with a sea urchin while surfing. There are probably many amazing hikes I'm not covering here .
+We just spent a week in paradise and thought I'd note someplaces we enjoyed the most. If we didn't absolutely love something about a place, it's not on the list. Obviously these recommendations are heavily skewed towards what my wife and I like to do which mostly revolves around being outside as much as possible, eating good food and drinking good coffee & beer. We are both vegetarian and although Hawaii's cuisine is fairly meat-centric, we were able to find some pretty amazing vegetarian options. Also, normally we'd hike a lot more, but I sprained my left ankle pretty bad on the first day on a hike and chanced up right foot with a sea urchin while surfing. There are probably many amazing hikes I'm not covering here.
 
 ## Maui 
-Maui is the most well-rounded of all 4 islands and this was a place that seemed to have something to do for everyone. 
+Maui is the most well-rounded of all 4 islands and this place seemed to have something to do for everyone. 
 ### Things to do 
 - **Iao Valley Hike**: It's a fairly short hike while being surrounded by magically large mountains and waterfalls everywhere you look. You also get to read about a bunch of history as you walk along the hike which makes it special. It reminded me a lot of Machu Picchu and dare I say it looked almost as beautiful as Machu Picchu without needing to hike for days. 
 - **Upcountry**: That's what they call the region that is on top of the hills.
-	- **Lavender Farm tour**: Lavender nerds would loose their shit here. There are 7 type of lavender, apparently. And they make all sorts of things with lavender. Perfume, butter, chapstick, tea & coffee. But the best of all was the lavender scones that you get to enjoy with passion fruit jam. You get to eat these while getting a 270 degree view of all of Maui, while being surrounded by a well manicured garden. 
-	- **Maui wines**: If you are into tropical wines, you will love this. They have a neat little wine tasting situation. But the best part about it is drive up there and greenery up  there. It felt like some remote part of Scotland. 
-	- **Surfing Goat cheese tour**: Ton of baby goats and the place has a surf board motif. Need I say more? Also offer tours and tastings.
-- **Beach Walks**: We enjoyed taking long walks along the beach at sunset everyday. You just can't go wrong with this but the two places we particularly liked were Wailea and Kaanapali Beach because they have nice paved paths that seemed to never end.
+	- **Lavender farm tour**: Lavender nerds would loose their shit here. There are 7 type of lavender, apparently. They make all sorts of things with lavender. Perfume, butter, chapstick, tea & coffee. But the best of all was the lavender scones that you get to enjoy with passion fruit jam. You get to eat these while getting a 270 degree view of all of Maui, while being surrounded by a well manicured garden. 
+	- **Maui wines**: If you are into tropical wines, you will love this. They have a neat wine tasting option. But the best part about it is the drive up there and greenery. It felt like some remote part of Scotland. 
+	- **Surfing Goat cheese tour**: Ton of baby goats in a place with surfboard motif. Need I say more? Also offer tours and tastings.
+- **Beach Walks**: We enjoyed taking long walks along the beach at sunset everyday. You just can't go wrong with this but the two places we particularly liked were Wailea and Kaanapali beach because they have nice paved paths that seemed to never end.
 -**Snorkelling**: My only other point of reference for snorkeling is from the Cenotes in Tulum. Although Tulum wins for the location, Maui wins for the variety of fish you get to see. Some colors are hard to describe. Some were so bright and made up of many colors that they put incredibly beautiful flowers to shame. Bonus, at Napili Bay, we also swam alongside a turtle that was about 4 feet for about 20 mins with nobody else next us. 
-- **Drive to Hana**: This was a lot of driving in one day but it was worth it. Waterfalls everywhere you look. Hana, the town itself isn't much to see and it would be all worthwhile if you aren't in a rush and are able to stop a number of times along the way and absorb the nature. Below are a few highlights. 
+- **Drive to Hana**: This was a lot of driving in one day but it was worth it. Waterfalls everywhere you look. Hana, the town itself isn't much to see and it would be all worthwhile if you aren't in a rush and are able to stop a number of times along the way and absorb your surroundings. Below are a few highlights:  
 	- **Twin falls**: A mini park with almost too many waterfalls. Also has a hike which we didn't end up doing but heard good recommendations about. Highlight recommend diving into the waterfall. I live to tell the tale. 
 	- **Wai'anapanapa State Park**: Cool black sand beach in a remote state park.
 	- **Oheo Gulch**: 7 "layers" of waterfalls that you could also swim in.
