--- a/_posts/2018-05-21-hawaii.markdown
+++ b/_posts/2018-05-21-hawaii.markdown
@@ -19,7 +19,7 @@ Maui is the most well-rounded of all 4 islands and this place seemed to have som
 - **Beach Walks**: We enjoyed taking long walks along the beach at sunset everyday. You just can't go wrong with this but the two places we particularly liked were Wailea and Kaanapali beach because they have nice paved paths that seemed to never end.
 -**Snorkelling**: My only other point of reference for snorkeling is from the Cenotes in Tulum. Although Tulum wins for the location, Maui wins for the variety of fish you get to see. Some colors are hard to describe. Some were so bright and made up of many colors that they put incredibly beautiful flowers to shame. Bonus, at Napili Bay, we also swam alongside a turtle that was about 4 feet for about 20 mins with nobody else next us. 
 - **Drive to Hana**: This was a lot of driving in one day but it was worth it. Waterfalls everywhere you look. Hana, the town itself isn't much to see and it would be all worthwhile if you aren't in a rush and are able to stop a number of times along the way and absorb your surroundings. Below are a few highlights:  
-	- **Twin falls**: A mini park with almost too many waterfalls. Also has a hike which we didn't end up doing but heard good recommendations about. Highlight recommend diving into the waterfall. I live to tell the tale. 
+	- **Twin falls**: A mini park with almost too many waterfalls. Also has a hike which we didn't end up doing but heard good recommendations about. Recommend diving into the waterfall. I live to tell the tale. 
 	- **Wai'anapanapa State Park**: Cool black sand beach in a remote state park.
 	- **Oheo Gulch**: 7 "layers" of waterfalls that you could also swim in.
 	- **Haleakala State Park**: Super gigantic state park which we didn't cover much but the places we saw were incredible.
@@ -32,9 +32,9 @@ Maui is the most well-rounded of all 4 islands and this place seemed to have som
 - **Maui-grown Coffee**: Family owned coffee shop. Try the peaberry coffee which is a type of coffee made from beans when there is only a single bean in the cherry. I tried to not get used to this expensive taste. 
 - **Paia Bay Coffee**: Mostly for the ambience but the coffee was solid. 
 - **Coconut Glenn's**:  It's on the drive to Hana at mile 27. You'll find a tiny hut that sells delicious vegan coconut ice creams, coconut water etc.
-- **Eat a ton of local fruit** : This applies for both islands. The quality is simply unmatched. Especially Pineapple, Papaya, Mangoes and Lychees. The best place to buy them are at random roadside stands when driving. You'll find some great deals and quality. 
+- **Eat ton of local fruit** : This applies for both islands. The quality is simply unmatched. Especially Pineapple, Papaya, Mangoes and Lychees. The best place to buy them are at random roadside stands when driving. You'll find some great deals and quality. 
 
-If you decide to go to more than one island. Use Mokulele airlines. They only fly 10 seater airplane which means that you have hassle free boarding and arrival process and you get the best view of the islands during take-off and landing. 
+If you decide to go to more than one island. Use Mokulele airlines. They only fly 10 seater commuter airplanes which means that you have hassle free boarding and arrival process and you get the best view of the islands during take-off and landing. 
 
 ## Big Island 
 It was like nothing else I had seen in my life and certainly not what I expected from an island in Hawaii. The Kona airport is surrounded with black lava with almost no vegetation or fauna. I later found that only a part of the island looked like that. There were parts of the island that were literally getting formed in front of our eyes. It's hard not to contemplate our origins, evolution, our place in the universe and many un-mundane questions while exploring the big island at every turn in the road.  
@@ -43,18 +43,19 @@ It was like nothing else I had seen in my life and certainly not what I expected
 - **Snorkeling with Manta Rays**: Another bucket list item.  I'll maybe write a whole post about it. Just enough to say that we spent about 45 mins in the middle of the ocean during sunset with Manta rays circling us (including one touching me). Uterly meditative experience.
 - **Kahalu'u bay for surfing and snorkeling**: Nice beginner break with colorful fish right beneath you. The water is green in color, so you can snorkel and look at the first while waiting for the waves. Only downside is the bay is filled with sea urchins. Wear thick booties.  
 - **Pololu valley**: Magical remote valley that ends in a beach with dramatic cliffs with almost no-one there. Couldn't find a more perfect place to just hang-out, read and relax.
-- **GreenWell Coffee farm tour**: One of the first coffee roasters to produce 100% Kona coffee. The tour is free and the farm has a bunch of other fruit trees too.They have coffee tastings and a tiny shop selling coffee and fruit. 
+- **GreenWell Coffee farm tour**: One of the first coffee roasters to produce 100% Kona coffee. The tour is free and the farm has a bunch of other fruit trees too (yes, I like fruit).They have coffee tastings and a tiny shop selling coffee and fruit. 
 - **Drive on Kohola Highway**: If you've visited Pololu valley, drive on this highway on the way back. You'll see ridiculously large mountains appearing and disappearing with the landscape around you changing about 5 times from ultra dry to the lushest green.
-- **Makalewana Beach**: I generally don't like to just "hang out" on the beach. But that is exactly what we did here. Hands-down the most beautiful beach I had ever been too. The bluest of blue waters with fine white sand. The beach itself is only about a few hundred meters long and you need to hike 2.5 miles on foot to get here which kept the crowds away. 
+- **Makalewana Beach**: I generally don't like to just "hang out" on the beach. But that is exactly what we did here. Hands-down the most beautiful beach I had ever been too. The bluest of blue waters with fine white sand. The beach itself is only about a few hundred meters long and you need to hike 2.5 miles on foot to get here which kept the crowds away. That makes it extra special.
+
 ### Food 
 - **Big Island Brew House**: Had some really interesting brews and solid food - a mix of mediterranean-mexican. They seemed to have won a ton of awards for their beer.
 - **Under the Bodhi Tree**: Best vegetarian food in the 4 islands. Excellently prepared with organic ingredients. It's a bit of drive from Kona but worth it. 
-- **Kona Brewing Company**: This took place of Maui brewing Co during our stay in the big island. Longboard lager is my favorite lager, so having this on tap at the mothership was a treat. Also found a new favorite - the Koko Brown with coconut and Kona coffee.  
+- **Kona Brewing Company**: This took place of Maui brewing Co during our stay in the big island. Longboard lager is my favorite lager, so having this on tap at the mothership was a treat. Also found a new favorite - the Koko Brown with a ton of coconut and Kona coffee.  
 - **Fresh off the grid**: Go here on your drive back from Polollu valley. A tiny smoothie and fresh fruit shop on an open farm facing the ocean. The smoothie was incredibly fresh. 
 - **Basik cafe for Acai Bowls**: Solid Acai bowls in downtown Kona. 
 - **Daylight Mind Coffee and the views**: The view from this cafe is unbeatable. Right on the ocean with some wonderful 100% Kona drip coffee. 
 - **Kaya's for coffee and breakfast**: Organic breakfast cafe with excellent coffee. They also had bulletproof coffee with Ghee which was quite good. It's a recipe I'm bringing back home. 
-- **Gertrude's Jazz Bar**: Live jazz overlooking the ocean. Quite a change in the Jazz bar scene compared to the underground jazz bar scene in New York City. Good cocktails too. We went around sunset and stayed through twilight. Perfect way to spend an evening. 
+- **Gertrude's Jazz Bar**: Live jazz overlooking the ocean. Quite a change in the jazz bar scene compared to the underground jazz bar scene in New York City. Good cocktails too. We went around sunset and stayed through twilight. Perfect way to spend an evening. 
 
 Reach out if you think other places should be on this list. I don't think this will be the last time we'll visit these two islands. 
 Wish you safe travels and good memories! 
