--- a/_posts/2018-05-21-hawaii.markdown
+++ b/_posts/2018-05-21-hawaii.markdown
@@ -6,7 +6,7 @@ tags : Travel
 
 ---
 
-We just spent a week in paradise and thought I'd note someplaces we enjoyed the most. If we didn't absolutely love something about a place, it's not on the list. Obviously these recommendations are heavily skewed towards what my wife and I like to do which mostly revolves around being outside as much as possible, eating good food and drinking good coffee & beer. We are both vegetarian and although Hawaii's cuisine is fairly meat-centric, we were able to find some pretty amazing vegetarian options. Also, normally we'd hike a lot more, but I sprained my left ankle pretty bad on the first day on a hike and chanced up right foot with a sea urchin while surfing. There are probably many amazing hikes I'm not covering here.
+We just spent a week in paradise and thought I'd note someplaces we enjoyed the most. If we didn't absolutely love something about a place, it's not on the list. Obviously these recommendations are heavily skewed towards what my wife and I like to do which mostly revolves around being outside as much as possible, eating good food and drinking good coffee & beer. We are both vegetarian and although Hawaii's cuisine is fairly meat-centric, we were able to find some pretty amazing vegetarian options. Also, normally we'd hike a lot more, but I sprained my left ankle pretty bad on the first day on a hike and chanced my right foot with a sea urchin while surfing. There are probably many amazing hikes I'm not covering here.
 
 ## Maui 
 Maui is the most well-rounded of all 4 islands and this place seemed to have something to do for everyone. 
