--- a/_posts/2014-03-13-ny.markdown
+++ b/_posts/2014-03-13-ny.markdown
@@ -1,11 +1,11 @@
 ---
 layout: post
-title: My New York Secrets Are Yours Now
+title: My New York Bohemian List
 category: posts
 ---
 There are many things I hate about New York but there are about twice the number of the things that I love about it. Here are a collections of things I tell people to do, eat and drink. Veers vegan/ vegetrian for the most part. 
 
-So here they are, my biggest hits:
+So here they are, my greatest hits:
  
 <h2>Do</h2>
 
@@ -42,7 +42,7 @@ The Raines Law Room | Probably the best prohibition setting bar in NYC with soli
 Chaan tea house| A place to wind down with a book or meet friends for tea<br>
 Blue Bottle Coffee| Rockefeller building<br>
 Toby's Estate Coffee| Williamsburg, Brooklyn<br>
-Kaffe 1668| Tribeca| They take their coffee very seriously here<br>
+Kaffe 1668| They take their coffee very seriously here<br>
 Le Colombe| Mochas are really good<br>
 Mud Truck on Astor Place| Coffee (Not always around -It's a truck, what do you expect)<br>
 Round K| Murakami would go here for coffee <br>
@@ -55,8 +55,9 @@ Levain| Best cookie in the world (Dark Chocolate peanut butter)<br>
 Magnolia Cupcakes| Quite touristy now, but if I had to pick one, I would go with the classic vanilla<br>
 Momofuku milk bar| Get the compost cookie<br>
 Van Leeuwen| Natural ice-creams. Try the Ginger or Gianduja<br> 
+<br>
 
 
-I've done my fare bit of travelling and I hate to admit it, but New York is the world's most amazing city and the places listed above are just a few reasons for it. 
+I've done my fare bit of travelling and I hate to admit it, but New York is the world's most amazing city and these places are just a few reasons for it. 
 
 ---
