--- a/_posts/2014-03-13-ny.markdown
+++ b/_posts/2014-03-13-ny.markdown
@@ -44,15 +44,15 @@ Blue Bottle Coffee| Rockefeller building<br>
 Toby's Estate Coffee| Williamsburg, Brooklyn<br>
 Kaffe 1668| They take their coffee very seriously here<br>
 Le Colombe| Mochas are really good<br>
-Mud Truck on Astor Place| Coffee (Not always around -It's a truck, what do you expect)<br>
+Mud Truck| Try the mocha from the truck or the store<br>
 Round K| Murakami would go here for coffee <br>
 
-<h2>End on a sweet note</h2>
+<h2>Sweets</h2>
 
 Morgenstern's Icecream| The temperature they serve the icecream at is perfect<br>
-Lady M| The mille crepe is something like you have never tasted before.Can't go wrong with chocolate or vanilla<br>
-Levain| Best cookie in the world (Dark Chocolate peanut butter)<br>
-Magnolia Cupcakes| Quite touristy now, but if I had to pick one, I would go with the classic vanilla<br>
+Lady M| The mille crepe is something like you have never tasted before.<br>
+Levain| The best cookie in the world (Dark Chocolate peanut butter)<br>
+Magnolia Cupcakes| Quite touristy now, but that shoudn't stop you<br>
 Momofuku milk bar| Get the compost cookie<br>
 Van Leeuwen| Natural ice-creams. Try the Ginger or Gianduja<br> 
 <br>
