--- a/_posts/2014-03-13-ny.markdown
+++ b/_posts/2014-03-13-ny.markdown
@@ -30,8 +30,8 @@ Dirt Candy| Vegan prix fixe. Just brilliant<br>
 Candle Cafe| Tasty vegetarian but nowhere close to healthy<br>
 Bubby’s| American Southern food and they have the best pies in town<br>
 La Esquina| Mouth watering tacos. Enough said <br>
-Sigiri| If you've never had Srilankan, just go. Order the Lamprais.<br>
-Kottu House| If you liked Sigiri, go here for the Kottu. Say hi to Chaz.<br>
+Sigiri| If you've never had Srilankan, just go. Order the Lamprais<br>
+Kottu House| If you liked Sigiri, go here for the Kottu. Say hi to Chaz<br>
 
 <h2>Drink</h2>
 
@@ -49,12 +49,13 @@ Round K| Murakami would go here for coffee <br>
 
 <h2>Sweets</h2>
 
-Morgenstern's Icecream| The temperature they serve the icecream at is perfect<br>
-Lady M| The mille crepe is something like you have never tasted before.<br>
+Lady M| Haven't had anything like it before<br>
+Morgenstern's Icecream| The icecream temperature they serve at is perfect<br>
 Levain| The best cookie in the world (Dark Chocolate peanut butter)<br>
 Magnolia Cupcakes| Quite touristy now, but that shoudn't stop you<br>
 Momofuku milk bar| Get the compost cookie<br>
 Van Leeuwen| Natural ice-creams. Try the Ginger or Gianduja<br> 
+
 <br>
 
 
